# ai-memory-mcp

./: .dockerignore  .env.example  .gitignore  .project_name  AGENTS.md  DOCKER.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README.md  TOOLS.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  service.py
integrations/: cursor_mcp.json  http_mode_config.json  vscode_mcp.json
scripts/: download_model.py  download_model_for_docker.py  migrate_db.py  migrate_vector.py  reindex_vectors.py
skills/ai-memory/: PROMPT_WEAK.md  SKILL.md
skills/ai-memory/references/: memory-enrich.md  memory-load.md  memory-save.md  memory-search.md
src/mcp_server/: __init__.py  database.py  models.py  server.py  vector_store.py
tests/integration/: test_integration.py
tests/unit/: test_mcp_server.py
web_panel/: i18n.py  main.py  quality.py
web_panel/locales/: en_US.json  zh_CN.json
web_panel/templates/: _macros.html  base.html  cold_memories.html  dashboard.html  memories.html  memory_detail.html  search.html
